--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -11,18 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Checkout
+      - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
           java-version: '11.x'
-      - name: Checkout code
-        uses: actions/checkout@v1
 
       # Build
       - name: Build
-        run: ./gradlew test build --info
+        run: ./gradlew test build
         env:
           ORG_GRADLE_PROJECT_githubUser: x-access-token
-          ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
+          ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_ACCESS_TOKEN }}
 
       # Release
       - name: Create Docker tag
