--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -21,7 +21,7 @@ jobs:
         run: ./gradlew test build
         env:
           ORG_GRADLE_PROJECT_githubUser: x-access-token
-          ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_ACCESS_TOKEN }}
+          ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
 
       # Release
       - name: Create Docker tag
@@ -43,8 +43,8 @@ jobs:
         run: "docker push $(cat .docker_image):$(cat .docker_tag)"
 
       # Deploy
-      - name: deploy to dev-fss
-        uses: navikt/deployment-cli/action@0.4.0
+      - name: Deploy to dev-fss
+        uses: navikt/deployment-cli/action@0.4.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
