Change wrapper permissions for gradlew

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -17,6 +17,8 @@ jobs:
           java-version: '11.x'
 
       # Build
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
       - name: Build
         run: ./gradlew test build
         env:
