Set image name to env

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -41,6 +41,7 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.GITHUB_ACCESS_TOKEN }}
         run: |
           echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin docker.pkg.github.com
+          echo "::set-env name=IMAGE::$(cat .docker_image):$(cat .docker_tag)"
       - name: Push Docker image
         run: "docker push $(cat .docker_image):$(cat .docker_tag)"
 
