--- a/nais-dev.yaml
+++ b/nais-dev.yaml
@@ -4,7 +4,7 @@ metadata:
   name: tortuga-planke
   namespace: default
   labels:
-    team: teampeon
+    team: pensjonsamhandling
 spec:
   image: {{ image }}
   port: 8080
