--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -1,55 +1,55 @@
-name: NAIS Deploy
-
-on:
-  push:
-    branches:
-      - master
-
-jobs:
-  deploy-to-prod:
-    name: Build, push and deploy to prod-fss
-    runs-on: ubuntu-latest
-    steps:
-      # Checkout
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '12.x'
-
-      # Build
-      - name: Change wrapper permissions
-        run: chmod +x ./gradlew
-      - name: Build
-        run: ./gradlew test build
-        env:
-          ORG_GRADLE_PROJECT_githubUser: x-access-token
-          ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
-
-      # Release
-      - name: Create Docker tag
-        env:
-          NAME: tortuga-planke
-        run: |
-          echo "docker.pkg.github.com"/"$GITHUB_REPOSITORY"/"$NAME" > .docker_image
-          echo "$(date "+%Y.%m.%d")-$(git rev-parse --short HEAD)" > .docker_tag
-      - name: Build Docker image
-        run: |
-          docker build -t $(cat .docker_image):$(cat .docker_tag) .
-      - name: Login to Github Package Registry
-        env:
-          DOCKER_USERNAME: x-access-token
-          DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin docker.pkg.github.com
-          echo "::set-env name=IMAGE::$(cat .docker_image):$(cat .docker_tag)"
-      - name: Push Docker image
-        run: "docker push $(cat .docker_image):$(cat .docker_tag)"
-
-      # Deploy
-      - name: Deploy to prod-fss
-        uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-fss
-          RESOURCE: nais-prod.yaml
-          IMAGE: ${{ env.IMAGE }}
+#name: NAIS Deploy
+#
+#on:
+#  push:
+#    branches:
+#      - master
+#
+#jobs:
+#  deploy-to-prod:
+#    name: Build, push and deploy to prod-fss
+#    runs-on: ubuntu-latest
+#    steps:
+#      # Checkout
+#      - uses: actions/checkout@v1
+#      - uses: actions/setup-java@v1
+#        with:
+#          java-version: '12.x'
+#
+#      # Build
+#      - name: Change wrapper permissions
+#        run: chmod +x ./gradlew
+#      - name: Build
+#        run: ./gradlew test build
+#        env:
+#          ORG_GRADLE_PROJECT_githubUser: x-access-token
+#          ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
+#
+#      # Release
+#      - name: Create Docker tag
+#        env:
+#          NAME: tortuga-planke
+#        run: |
+#          echo "docker.pkg.github.com"/"$GITHUB_REPOSITORY"/"$NAME" > .docker_image
+#          echo "$(date "+%Y.%m.%d")-$(git rev-parse --short HEAD)" > .docker_tag
+#      - name: Build Docker image
+#        run: |
+#          docker build -t $(cat .docker_image):$(cat .docker_tag) .
+#      - name: Login to Github Package Registry
+#        env:
+#          DOCKER_USERNAME: x-access-token
+#          DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+#        run: |
+#          echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin docker.pkg.github.com
+#          echo "::set-env name=IMAGE::$(cat .docker_image):$(cat .docker_tag)"
+#      - name: Push Docker image
+#        run: "docker push $(cat .docker_image):$(cat .docker_tag)"
+#
+#      # Deploy
+#      - name: Deploy to prod-fss
+#        uses: nais/deploy/actions/deploy@v1
+#        env:
+#          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+#          CLUSTER: prod-fss
+#          RESOURCE: nais-prod.yaml
+#          IMAGE: ${{ env.IMAGE }}
